@@ -67,6 +67,21 @@ handle_bluetooth_toggle() {
     fi
 }
 
+handle_shengine() {
+    . /etc/acpi/lib/shengine.sh
+    if [ -e "$SHENGINE_CTL" ]; then
+	cycle_shengine
+	case $? in
+	    0) notify super_hybrid_engine 'S. H. Engine: Performance'; ;;
+	    1) notify super_hybrid_engine 'S. H. Engine: Standard'; ;;
+	    2) notify super_hybrid_engine 'S. H. Engine: Power-saving'; ;;
+	    *) notify error 'S. H. Engine unavailable'
+	esac
+    else
+	notify error 'S. H. Engine unavailable'
+    fi
+}
+
 show_camera() {
     if camera_is_on; then
 	notify camera 'Camera Enabled'
